k8s_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80       # External port
    targetPort: 5000 # Internal port where the app is listening
  type: LoadBalancer
